examples/test/testpolicy17603.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17603
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key39: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value16
          key0: value31
          key29: value44
      podSelector:
        matchLabels:
          key7: value44
          key5: value41
          key2: value43
